<resources>
    <string name="app_name">nasgor polonia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="note">Note</string>
    <string name="pesan">Pesan</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="metode_pengiriman">Metode Pengiriman</string>
    <string name="confirm_order">Konfirmasi Pesanan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="quantity">Quantity</string>
    <string name="delivery">Delivery</string>
    <string name="cash">Cash</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="take_away">Take Away</string>
    <string name="cart">Keranjang</string>
    <string name="title">Title</string>
    <string name="price">Harga</string>
    <string name="_0">0</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="empty_cart">Keranjang Kosong</string>
    <string name="logout">Keluar</string>
    <string name="back_to_home">Back to Home</string>
    <string name="pesanan_kamu_sudah_masuk">Pesanan Kamu Sudah Masuk</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil</string>
    <string name="tambahkan_ke_keranjang">Tambahkan ke Keranjang</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="harga_item">Harga Item</string>
    <string name="nama_item">Nama Item</string>
    <string name="home">Home</string>
    <string name="_1">1</string>
    <string name="rp">Rp</string>

    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="_62_8">+62: 8</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="your_mail_com">your@mail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="mau_makan_apa_hari_ini">Mau Makan Apa Hari Ini?</string>
    <string name="hai_user">Hai, User</string>
    <string name="histori">Histori</string>

</resources>