<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMenuFragment">

    <ImageView
        android:id="@+id/imageadd"
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/thumbnail_height"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/btnback"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="20dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageadd">

        <TextView
            android:id="@+id/nameadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nama_item" />

        <TextView
            android:id="@+id/priceadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="10dp"
            android:text="@string/harga_item" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/deskripsi" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:text="@string/note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview1"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_note"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/note"
        android:inputType="text"
        android:minWidth="32dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/reduce"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/min_icon"
        app:layout_constraintBottom_toTopOf="@id/btnadd2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/quantity"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/btnadd1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toTopOf="@id/btnadd2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/quantity"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btnadd2"
        app:layout_constraintEnd_toStartOf="@id/btnadd1"
        app:layout_constraintStart_toEndOf="@id/reduce" />

    <Button
        android:id="@+id/btnadd2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tambahkan_ke_keranjang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="32dp" />


</androidx.constraintlayout.widget.ConstraintLayout>